@@ -62,6 +62,8 @@ private:
 	void register_color_component(std::string widget_id, uint8_t color_t::* component);
 	/** Inherited from modal_dialog, implemented by REGISTER_DIALOG. */
 	virtual const std::string& window_id() const override;
+	/** Inherited from modal_dialog. */
+	virtual void pre_show(window& window) override;
 };
 } // namespace dialogs
 } // namespace gui2
