@@ -16,7 +16,10 @@
 
 #include "gui/dialogs/editor/edit_scenario.hpp"
 
+#include "gui/auxiliary/find_widget.hpp"
 #include "gui/widgets/settings.hpp"
+#include "gui/widgets/text_box.hpp"
+#include "gui/widgets/window.hpp"
 
 namespace gui2
 {
@@ -67,5 +70,13 @@ editor_edit_scenario::editor_edit_scenario(
 				  victory_when_enemies_defeated);
 	register_bool("random_start_time", true, random_start_time);
 }
+
+void editor_edit_scenario::pre_show(window& win)
+{
+	win.add_to_tab_order(find_widget<text_box>(&win, "id", false, false));
+	win.add_to_tab_order(find_widget<text_box>(&win, "name", false, false));
+	win.add_to_tab_order(find_widget<text_box>(&win, "description", false, false));
+}
+
 } // namespace dialogs
 } // namespace gui2
