@@ -54,6 +54,8 @@ public:
 private:
 	/** Inherited from modal_dialog, implemented by REGISTER_DIALOG. */
 	virtual const std::string& window_id() const override;
+	/** Inherited from modal_dialog. */
+	virtual void pre_show(window& window) override;
 };
 } // namespace dialogs
 } // namespace gui2
