@@ -1,4 +1,6 @@
 Version 1.13.8+dev:
+ * User Interface:
+   * Enable the use of tab to switch between text fields in most dialogs.
 
 Version 1.13.8:
   * Campaigns:
